# some_code

./: 00.c  00.s  031.s  1.txt  2.py  3.py  CMakeLists.txt  a.out  ams2.c  another-inf23-0.c  asm00.c  c_asm  c_asm_86  c_inf05-0.c  cipher_text.txt  client.c  contol.c  crypted.txt  encryptor  fuse-runner  global.c  i00.s  inf-14-1-tester.c  inf02-0.c  inf02-1.c  inf02-2.c  inf02-3.c  inf02-4.c  inf02-5.c  inf03-0.s  inf03-1.c  inf03-1.s  inf03-2.c  inf03-2.s  inf04-0.s  inf04-1.c  inf04-1.s  inf04-2.s  inf05-0.c  inf05-0.s  (+108 more)
fuse_c_example/: CMakeLists.txt  main.c
gcc-linaro-7.3.1-2018.05-i686_arm-linux-gnueabi/: gcc-linaro-7.3.1-2018.05-linux-manifest.txt
gcc-linaro-7.3.1-2018.05-i686_arm-linux-gnueabi/arm-linux-gnueabi/lib/: libgfortran.so.4.0.0  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.so.0.0.0
gcc-linaro-7.3.1-2018.05-i686_arm-linux-gnueabi/arm-linux-gnueabi/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xc  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xn  armelf_linux_eabi.xsc  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdw  armelfb_linux_eabi.xn  armelfb_linux_eabi.xs  armelfb_linux_eabi.xsc  armelfb_linux_eabi.xsw  armelfb_linux_eabi.xw
gcc-linaro-7.3.1-2018.05-i686_arm-linux-gnueabi/arm-linux-gnueabi/libc/lib/: libatomic.so.1.2.0  libcilkrts.so.5.0.0  libstdc++.so.6.0.24-gdb.py  libubsan.so.0.0.0
gcc-linaro-7.3.1-2018.05-i686_arm-linux-gnueabi/arm-linux-gnueabi/libc/sbin/: sln
gcc-linaro-7.3.1-2018.05-i686_arm-linux-gnueabi/lib/: libcc1.so.0.0.0
(+64 files in other folders)
